<resources>
    <string name="app_name">Blood Donation</string>


    <string name="password"> Password </string>
    <string name="phone">Mobile no </string>

    <string name="tv_what_is_your_gender">What is your gender? </string>
    <string name="cb_licence">I agree to the terms and conditions</string>
    <string name="btn_sign_up"> Create an account </string>

    <string-array name="blood_type">
        <item>A+ </item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <!--
    array of the spinner of no of nuits
     -->
    <string-array name="num_of_nuits">
        <item>1 </item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <!--
   array of the spinner of no of nuits
    -->
    <string-array name="hospital_location">
        <item>Kafr El-Sheikh General Hospital </item>
        <item>Al Zahraa Modern Hospital</item>
        <item>Al Salam Specialized Hospital</item>
        <item>Obour Hospital</item>
        <item>Kafrelsheikh University Hospital</item>
        <item>Al-Fath Hospital</item>
        <item>Military hospital</item>
        <item>Al-Khayat Charitable Hospital</item>
        <item>Sharia Society Hospital</item>
    </string-array>

    <string name="rb_male">Male</string>
    <string name="rb_female">Female</string>


    <string name="tv_forget_password">Forget password?</string>
    <string name="chbox_remember">Remember me?</string>
    <string name="btn_login">Login</string>
    <string name="tv_have_an_account">Already have an account?</string>
    <string name="tv_login">Login</string>
    <string name="tv_do_not_have_an_account">Do not have an account?</string>

    <string name="tv_signUp_header"> Create an account </string>
    <string name="tv_header_signUp_2">Welcome, enter your details lets get started.</string>


    <string name="tv_signIn_header">Sign in into your account</string>
    <string name="tv_signIn_header_2">Good to see you again, enter your details below.</string>

    <string name="et_hint_fullName">Full Name </string>
    <string name="et_hint_emailAddress">Email Address  </string>

    <string name="tv_or">Or</string>

    <string name="btn_login_with_facebook">Facebook</string>
    <string name="btn_login_with_google">Google</string>
    <string name="choose_your_blood_type"> Blood type</string>
    <string name="btn_next_slide">Next </string>
    <string name="btn_skip_slide">Skip</string>
    <string name="btn_getStarted_slide">Get started</string>

    <string name="headingOne">Donate Blood</string>
    <string name="headingTwo">Schedule Appointments</string>

    <string name="descTwo">Easily schedule appointments to help save a life.</string>
    <string name="descOne">Donate blood at your own free time at
        any hospital or blood bank near you.</string>
    <string name="a_type_blood">A+</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="tv_sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- menu items   -->
    <string name="m_home">Home</string>
    <string name="m_request_blood">Request</string>
    <string name="m_notification">Notification</string>
    <string name="m_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_evining">Good evining</string>
    <string name="btn_donate_blood">Donate Blood</string>
    <string name="btn_find_blood_bank">Find Blood Bank</string>
    <string name="tv_select_blood_type">Select Blood type</string>
    <string name="tv_how_many_units_needed">How many units needed?</string>
    <string name="tv_hospital_name_and_location">Hospital Name and Location</string>
    <string name="tv_additional_information_optional">Additional Information (Optional)</string>
    <string name="et_hint_any_information_that_we_should_consider">Any information that we should consider</string>
    <string name="tv_donate_blood">Donate Blood</string>
    <string name="tv_thank_you_for_being_a_hero_choose_blood_type_and_location_that_works_best_for_you">Thank you for being a Hero!. Choose blood Type
        and location that works best for you.</string>
    <string name="btn_submit">Submit</string>
    <string name="tv_blood_type">Blood type</string>
    <string name="tv_donations">Donations</string>
    <string name="tv_requests">Requests</string>

    <string name="btn_help_support"><![CDATA[Help & Support]]></string>
    <string name="tv_forgot_your_password">Forgot Your Password?</string>
    <string name="tv_enter_your_email_below_to_receive_password_reset_instructions">Enter your email below
        to receive password reset instructions</string>
    <string name="tv_password_updated">PASSWORD UPDATED</string>
    <string name="your_password_has_been_updated">your password has been updated!</string>
    <string name="default_web_client_id_string">Connect with Google</string>


</resources>