<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/m_home"
        android:title="@string/m_home"
        android:icon="@drawable/ic_home"
        />
    <item android:id="@+id/m_request"
        android:title="@string/m_request_blood"
        android:icon="@drawable/ic_request"
        />

    <item
        android:id="@+id/textinput_placeholder"
        android:enabled="false"
        android:title="" />
    <item android:id="@+id/m_notification"
        android:title="@string/m_notification"
        android:icon="@drawable/ic_notification"
        />
    <item android:id="@+id/m_prorile"
        android:title="@string/m_profile"
        android:icon="@drawable/ic_profile"
        />


</menu>