<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/parentLogin"
    tools:context=".Activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/pb_login"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/view3"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

            <TextView
                android:id="@+id/tv_header_signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/manrope_extra_bold"
                android:text="@string/tv_signIn_header"
                android:textColor="@color/tv_color"
                android:textSize="24sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_email_signIn"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@color/background"
                android:hint="@string/et_hint_emailAddress"
                app:boxStrokeColor="#ED394A"
                app:hintTextColor="@color/tv_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email_login"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:drawableEnd="@drawable/ic_profile"
                    android:fontFamily="@font/manrope_bold"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/tv_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInput_password_signIn"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/password"
                app:boxStrokeColor="#ED394A"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/tv_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInput_email_signIn">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:fontFamily="@font/manrope_bold"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/chBox_rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:buttonTint="@color/tv_color"
                android:fontFamily="@font/manrope_light"
                android:text="@string/chbox_remember"
                android:textColor="@color/tv_color"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInput_password_signIn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/btn_selector"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/btn_sign_in"
                android:textAllCaps="false"
                android:textColor="#FEF6F6"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_forgetPassword" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/manrope_light"
                android:text="@string/tv_signIn_header_2"
                android:textColor="@color/tv_color"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_header_signIn" />

            <TextView
                android:id="@+id/tv_forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/tv_forget_password"
                android:textColor="#D32F2F"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/chBox_rememberMe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/chBox_rememberMe" />

            <View
                android:id="@+id/view2"
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:background="#D1C4C4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

            <View
                android:id="@+id/view3"
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="#D1C4C4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/manrope_regular"
                android:text="@string/tv_or"
                android:textColor="@color/tv_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/view3"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login_with_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_google"
                    android:drawableStart="@drawable/google"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/manrope_regular"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/btn_login_with_google"
                    android:textAllCaps="false"
                    android:textColor="@color/tv_color"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatButton

                    android:id="@+id/btn_loginWithFacebook"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_facebook"
                    android:drawableStart="@drawable/facebook"
                    android:fontFamily="@font/manrope_regular"
                    android:padding="10dp"
                    android:text="@string/btn_login_with_facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:icon="@drawable/facebook" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/manrope_regular"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/tv_color"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_signUp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/tv_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/tv_sign_up"
                android:textColor="#ED394A"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/textView9"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>