<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroFragments.ThirdFragment" >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_getStarted_slide"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/btn_selector"
        android:text="@string/btn_getStarted_slide"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_heading_one3"
        android:layout_width="200dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/manrope_bold"
        android:gravity="center"
        android:text="@string/headingTwo"
        android:textColor="@color/tv_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/tv_descOne3"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/descTwo"
        android:textColor="@color/tv_color"
        app:layout_constraintEnd_toEndOf="@+id/tv_heading_one3"
        app:layout_constraintStart_toStartOf="@+id/tv_heading_one3"
        app:layout_constraintTop_toBottomOf="@+id/tv_heading_one3" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_descOne3"
        app:srcCompat="@drawable/ic3" />
</androidx.constraintlayout.widget.ConstraintLayout>